--- a/react/package.json
+++ b/react/package.json
@@ -4,20 +4,21 @@
   "description": "",
   "main": "src/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "uglifyjs-webpack-plugin": "^0.4.6",
+    "jest": "^22.1.4",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.5.5"
   }
 }
