--- a/react/package.json
+++ b/react/package.json
@@ -5,7 +5,7 @@
   "main": "src/bundle.js",
   "jest": {
     "verbose": true,
-    "setupTestFrameworkScriptFile": "./jest_setup.js"
+    "setupTestFrameworkScriptFile": "./setupJest.js"
   },
   "scripts": {
     "test": "jest"
@@ -26,6 +26,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.4.2",
+    "jest-fetch-mock": "^1.4.2",
     "react-test-renderer": "^16.2.0",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.5.5"
